--- a/Code3.1/Views/Home/Index.cshtml
+++ b/Code3.1/Views/Home/Index.cshtml
@@ -8,12 +8,12 @@
         <tr class="text-center">
             @*<th>studentId</th>*@
             <th>name</th>
-            <th>age</th>
-            <th>email</th>
-            <th>gender</th>
-            <th>address</th>
-            <th>language</th>
-            <th>operation</th>
+            <th colspan="2">age</th>
+            <th colspan="2">email</th>
+            <th colspan="2">gender</th>
+            <th colspan="2">address</th>
+            <th colspan="2">language</th>
+            <th colspan="2">operation</th>
         </tr>
     </thead>
     <tbody class="text-center" id="table_data"></tbody>
